--- a/2_Linear_Regression_Interpretability.ipynb
+++ b/2_Linear_Regression_Interpretability.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": " 2. Linear Regression: Interpretability",
+      "name": "2. Linear Regression: Interpretability",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -90,22 +90,8 @@
         "# Our score function. More explained later.\n",
         "from sklearn.metrics import r2_score\n",
         "\n",
-        "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-        "import ipywidgets as widgets\n",
-        "from mpl_toolkits import mplot3d\n",
-        "\n",
         "from pycosmos import CosmosProject\n",
-        "tamu_datathon = CosmosProject('tamu_datathon')\n",
-        "\n",
-        "def myplot (_plt, _title, x_label, y_label, x, data, data_label, model=[], model_label=\"\"):\n",
-        "    _plt.scatter(x, data, color='b', label=data_label)\n",
-        "    if len(model)>0:\n",
-        "        _plt.plot (x, model, color='r', label=model_label)\n",
-        "\n",
-        "    _plt.set_xlabel(x_label)\n",
-        "    _plt.set_ylabel(y_label)\n",
-        "    _plt.set_title(_title)\n",
-        "    _plt.legend(loc='upper left')\n"
+        "tamu_datathon = CosmosProject('tamu_datathon')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -174,21 +160,62 @@
       "metadata": {
         "id": "DxwcdzJkKWc5",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
-        "# @title Generate some data and scatterplot\n",
-        "w_true = 3\n",
-        "b_true = 2\n",
+        "# @title Set constants for plotting\n",
+        "w_true = 1\n",
+        "b_true = 0\n",
+        "w_min, w_max = -10, 11\n",
+        "b_min, b_max = -30, 30\n",
+        "w_range = np.linspace(w_min, w_max, 100)\n",
+        "b_range = np.linspace(b_min, b_max, 100)\n",
         "# Generate some dummy data\n",
         "def dummy_data():\n",
         "  x = np.sort(np.random.uniform(-5, 5, size=30))\n",
         "  y_hat = w_true*x+b_true\n",
         "  y = np.random.normal(y_hat)\n",
         "  return x, y\n",
-        "x, y = dummy_data()\n",
-        "myplot (plt.subplot(), \"Dummy data with a strong correlation\", \"x\", \"y\", x, data=y, data_label=\"y\")"
+        "x, y = dummy_data()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GI6RY7dliwxj",
+        "colab_type": "code",
+        "cellView": "form",
+        "colab": {}
+      },
+      "source": [
+        "# @title Plot data on scatterplot\n",
+        "plt.scatter(x, y)\n",
+        "plt.xlabel(\"x\")\n",
+        "plt.ylabel(\"y\")\n",
+        "plt.ylim(b_min, b_max)\n",
+        "plt.xlim(min(x), max(x))\n",
+        "plt.title(\"Dummy Data with A Strong Positive Correlation\")\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a0rxQ0pJMtUq",
+        "colab_type": "code",
+        "cellView": "form",
+        "colab": {}
+      },
+      "source": [
+        "# @title Import some libraries we need for interactive plotting\n",
+        "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+        "import ipywidgets as widgets\n",
+        "from mpl_toolkits import mplot3d"
       ],
       "execution_count": 0,
       "outputs": []
@@ -198,16 +225,11 @@
       "metadata": {
         "id": "hz2hGcYiKahq",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
         "# @title Define functions for plotting\n",
-        "w_min, w_max = -5, 5\n",
-        "b_min, b_max = -5, 5\n",
-        "w_range = np.linspace(w_min, w_max, 100)\n",
-        "b_range = np.linspace(b_min, b_max, 100)\n",
-        "\n",
         "def loss(w, b):\n",
         "  y_hat = w*x+b\n",
         "  return ((y-y_hat)**2).sum()\n",
@@ -215,8 +237,11 @@
         "def plot_loss(w, b, ax):\n",
         "  X, Y = np.meshgrid(w_range, b_range)\n",
         "  Z = np.array([[loss(w, b) for w in w_range] for b in b_range])\n",
+        "  # ax = plt.axes(projection='3d')\n",
         "  ax.plot_surface(X, Y, Z, cmap='viridis', alpha=.3)\n",
         "  ax.scatter3D([w], [b], [loss(w, b)])\n",
+        "  # ax.plot3D([w]*len(w_range), b_range, b_gradient(w), 'gray')\n",
+        "  # ax.plot3D(w_range, [b] * len(b_range), w_gradient(b), 'gray')\n",
         "  ax.text(w, b, loss(w, b), \"({},{}), Loss: {:.0f}\".format(w, b, loss(w, b)))\n",
         "  ax.set_title(\"Computer's Brain: Minimize the Loss\")\n",
         "  ax.set_xlabel('w')\n",
@@ -227,10 +252,16 @@
         "def plot_model(w, b, ax=None):\n",
         "    ax = ax or plt.subplot()\n",
         "    x, y = dummy_data()\n",
+        "    ax.scatter(x, y, label=\"Data\")\n",
+        "    ax.set_ylim(b_min, b_max)\n",
+        "    ax.set_xlim(min(x), max(x))\n",
         "    model = w*x+b\n",
-        "    m_label = 'Model: $\\hat{{y}}$={:.2f}*x+{:.0f}'.format(w, b)\n",
-        "    myplot (ax, 'Fit Model To Data: ($R^2$: {:.2f})'.format(r2_score(y, model)), \"x\", \"y\", x, y, \"Data\", model, m_label)\n",
-        "    \n",
+        "    ax.plot(x, model, color=\"r\", label='Model: $\\hat{{y}}$={:.2f}*x+{:.0f}'.format(w, b))\n",
+        "    ax.set_xlabel('x')\n",
+        "    ax.set_ylabel('y')\n",
+        "    ax.legend(loc='upper left')\n",
+        "    ax.set_title('Fit Model To Data: ($R^2$: {:.2f})'.format(r2_score(y, model)))\n",
+        "\n",
         "def plot(w, b):\n",
         "  fig = plt.figure(figsize=(15, 6))\n",
         "  ax1 = plt.subplot(121)\n",
@@ -246,7 +277,7 @@
       "metadata": {
         "id": "SeIeJTbVM2VN",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -254,8 +285,8 @@
         "# You may have to run this cell a few times to get the plot to show\n",
         "interact(\n",
         "  plot,\n",
-        "  w = widgets.IntSlider(value=-5, min=-5, max=5, step=1),\n",
-        "  b = widgets.IntSlider(value=-5, min=-5, max=5, step=1)\n",
+        "  w = widgets.IntSlider(value=-10, min=w_min, max=w_max, step=1),\n",
+        "  b = widgets.IntSlider(value=-25, min=b_min, max=b_max, step=1)\n",
         ")\n",
         "print(\"Adjust the parameters: w and b to fit the model to the data!\")\n",
         "plt.show()"
@@ -290,7 +321,14 @@
         "dummy_model = LinearRegression().fit(x.reshape(-1, 1), y)\n",
         "y_hat = dummy_model.predict(x.reshape(-1, 1))\n",
         "\n",
-        "myplot (plt.subplot(), \"Computer Fit Model ($R^2$: {:.2f})\".format(r2_score(y, y_hat)), \"x\", \"y\", x, y, \"Data\", y_hat, r'Model: $\\hat{{y}}$={:.2f}*x+{:.2f}'.format(dummy_model.coef_[0], dummy_model.intercept_))"
+        "# Plot the original data and the line from our model.\n",
+        "plt.scatter(x, y, label='Data')\n",
+        "plt.plot(x, y_hat, 'r', label='Model: $\\hat{{y}}$={:.2f}*x+{:.0f}'.format(dummy_model.coef_[0], dummy_model.intercept_))\n",
+        "# Set location of the legend of the plot.\n",
+        "plt.legend(loc='upper left')\n",
+        "plt.ylim(b_min, b_max)\n",
+        "plt.title(\"Computer Fit Model ($R^2$: {:.2f})\".format(r2_score(y, y_hat)))\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -319,7 +357,7 @@
       "metadata": {
         "id": "oqQ9wl6jO8ij",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -359,7 +397,7 @@
       "metadata": {
         "id": "X2PZrdmLQGWN",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "source": [
@@ -404,7 +442,7 @@
         "\n",
         "<img src=\"https://cdn.vox-cdn.com/thumbor/rp-0KYsHXAmXi4MRksvU5NVNv_c=/0x0:5545x3762/1200x800/filters:focal(2330x1438:3216x2324)/cdn.vox-cdn.com/uploads/chorus_image/image/60095365/shutterstock_246334408.0.jpg\" alt=\"alt\" width=\"400\"/>\n",
         "\n",
-        "We'll be using a simple dataset containing information about the house of prices and other factors about the houses in King Country, USA. For starters, we'll be using the sqft (i.e., square footage) of a house to predict pricing. \n",
+        "We'll be using a simple dataset containing information about the house of prices and other factors about the houses in King Country, USA. For starters, we'll be using the sqrt of a house to predict pricing. \n",
         "\n",
         "Obviously, this will not be a perfect model because the price of a house depends on a lot of other things than sqft, but this will be a good starting point."
       ]
@@ -417,9 +455,13 @@
         "colab": {}
       },
       "source": [
-        "# @title Visualize the data\n",
+        "# Visualize the data\n",
         "house_data = pd.read_csv('https://cosmos-api-prod-datasetsbucket-iuph41amgzfj.s3.amazonaws.com/house_data.csv')\n",
-        "myplot (plt.subplot(), \"\", \"sqft\", \"price\", house_data['sqft_living'], house_data['price'], \"Data\")\n",
+        "# The scatter function is used to created a scatter plot. The first variable\n",
+        "# passed is plotted on the x-axis and the second on the y-axis.\n",
+        "plt.scatter(house_data['sqft_living'], house_data['price'])\n",
+        "plt.xlabel('sqft_living')\n",
+        "plt.ylabel('price')\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -433,13 +475,21 @@
         "colab": {}
       },
       "source": [
-        "# @title Fit a (linear) model\n",
+        "# Fit a (linear) model\n",
         "x = house_data[['sqft_living']]\n",
         "y = house_data['price']\n",
         "house_model = LinearRegression().fit(x, y)\n",
         "y_hat = house_model.predict(x)\n",
-        "myplot (plt.subplot(), \"Computer Fit Model ($R^2$: {:.2f})\".format(r2_score(y, y_hat)), \"sqft_living\", \"price\", x, y, \"Data\", y_hat, 'Model: y={:.2f}*x+{:.0f}'.format(house_model.coef_[0], house_model.intercept_))\n",
-        "plt.show()\n"
+        "\n",
+        "# Plot the original data and the line from our model.\n",
+        "plt.scatter(x, y, label='Data')\n",
+        "plt.plot(x, y_hat, 'r', label='Model: y={:.2f}*x+{:.0f}'.format(house_model.coef_[0], house_model.intercept_))\n",
+        "# Set location of the legend of the plot.\n",
+        "plt.legend(loc='upper left')\n",
+        "plt.title(\"Computer Fit Model ($R^2$: {:.2f})\".format(r2_score(y, y_hat)))\n",
+        "plt.xlabel('sqft_living')\n",
+        "plt.ylabel('price')\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -453,7 +503,7 @@
       "source": [
         "#### Interpretation of Results\n",
         "\n",
-        "1. $R^2$=0.49 which means that aproximately 49% of the house price can be explained by the sqft of the house.\n",
+        "1. $R^2$=0.23 which means that aproximately 49% of the house price can be explained by the sqrt of the house.\n",
         "2. Note that the weight parameter ($w$) in our model fit is 280 meaning that a **1 sqft** increase in **sqft_living** corresponds to a **\\$280** increase in **price**. We certainly have to take this interpretation with a grain of salt though as our $R^2$ is low.\n",
         "\n",
         "One of the reasons our score is low is the lack of _features_. While the sqft of the house could give us some information about how much money it will make, there are a lot of other variables like location, age, condition, etc. Up ahead, we'll see how having more features can help us create better models, but also things we have to watch out for."
@@ -481,7 +531,6 @@
         "colab": {}
       },
       "source": [
-        "#@title Let us see some more features\n",
         "house_data.head()"
       ],
       "execution_count": 0,
@@ -536,7 +585,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Let us choose the following features for our model based on correlation:\n",
+        "We'll chose the following features for our model based on correlation:\n",
         "\n",
         "* **bedrooms**: Number of bedrooms per house\n",
         "* **bathrooms**: Number of Bathrooms per house\n",
@@ -553,7 +602,7 @@
       },
       "source": [
         "# Let's select the important features we'll be using in our model.\n",
-        "house_features_names = ['bedrooms', 'bathrooms', 'sqft_living', 'year_built', 'grade']\n",
+        "house_features_names = ['bedrooms', 'bathrooms', 'sqft_living', 'year_built']\n",
         "\n",
         "house_features = house_data[house_features_names]\n",
         "\n",
@@ -659,7 +708,7 @@
         "colab": {}
       },
       "source": [
-        "house_features_names = ['sqft_living', 'year_built', 'grade']\n",
+        "house_features_names = ['sqft_living', 'year_built']\n",
         "house_features = house_data[house_features_names]\n",
         "\n",
         "house_model = LinearRegression().fit(house_features, house_target)\n",
@@ -793,7 +842,7 @@
         "colab": {}
       },
       "source": [
-        "email = \"you@email.com\"  # e.g. email = \"example@gmail.com\""
+        "email = None  # e.g. email = \"example@gmail.com\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -842,7 +891,7 @@
         "\n",
         "\n",
         "# Set the following variable to the feature which has the highest correlation with 'quality'\n",
-        "most_correlated = 'None'  # e.g. most_correlated = 'sulphates'"
+        "most_correlated = None  # e.g. most_correlated = 'sulphates'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -939,7 +988,7 @@
       "metadata": {
         "id": "oZ9KX70D4smb",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {}
       },
       "source": [
@@ -948,6 +997,27 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lXOKCewLDd5G",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Take Home Challenge\n",
+        "### Largest data set ever recorded of the ocean temperatures.\n",
+        "![alt text](https://3c1703fe8d.site.internapcdn.net/newman/csz/news/800/2018/3-ocean.jpg)\n",
+        "\n",
+        "Read up on the data here: https://www.kaggle.com/sohier/calcofi/version/2\n",
+        "\n",
+        "Is there a relationship between water salinity & water temperature? Can you predict the water temperature based on salinity? Can you get better accuracy by including more features? Can you interpret the model for us? Can you plot highly correlated variables?\n",
+        "\n",
+        "**Note:** This is big data! In fact, this is the largest data set of it's type (read more from link). In total, (864863 rows/samples, 74 columns). As such, It may take a little time to read in.\n",
+        "\n",
+        "\n",
+        "Read in the data from here: https://cosmos-api-prod-datasetsbucket-iuph41amgzfj.s3.amazonaws.com/water_data.csv"
+      ]
     }
   ]
 }
